plugins {
    id 'com.github.johnrengelman.shadow' version '7.0.0'
    id 'maven-publish'
    id 'idea'
    id 'java'
}

group 'cc.minetale'
version 'LATEST'

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
	compileOnly         group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.22'

    compileOnly group: 'cc.minetale', name: 'Flame',  version: 'LATEST'
    compileOnly group: 'cc.minetale', name: 'mLib',   version: 'LATEST'
    compileOnly group: 'cc.minetale', name: 'Quartz', version: 'LATEST'
}

compileJava.options.encoding = 'UTF-8'
sourceCompatibility = 17
targetCompatibility = 17

java {
    withJavadocJar()
    withSourcesJar()
}

shadowJar {
    classifier = null
}

publishing {
    publications {
        shadow(MavenPublication) { publication ->
            project.shadow.component(publication)
        }
    }
}

tasks.withType(Jar) {
    destinationDirectory = file("../../Build")
}

task buildJar(dependsOn: ['clean', 'publishToMavenLocal'])